#pragma once
class Aro
{
private:
    /* data */
public:
    Aro(/* args */) {}
    ~Aro() {}
};