#pragma once
class Enemigo
{
private:
    /* data */
public:
    Enemigo(/* args */) {}
    ~Enemigo() {}
};