#pragma once
#include <Sonic.hpp>
#include <Escenario.hpp>

class Juego
{
private:
    Sonic sonic; // tiene
    Escenario escenario;

public:
    Juego(/* args */) {}
    ~Juego() {}
};
