#pragma once
class Puente
{
private:
    /* data */
public:
    Puente(/* args */) {}
    ~Puente() {}
};