#pragma once
class Resorte
{
private:
    /* data */
public:
    Resorte(/* args */) {}
    ~Resorte() {}
};